# dude-duck

./: .gitignore  Dockerfile  config.py  docker-compose.yml  pyproject.toml  requirements.txt  starter.py  test.py
app/bot/: __init__.py  cbdata.py
app/bot/handlers/: __init__.py  close_order.py  register.py  registr.py  start.py
app/bot/handlers/order/: __init__.py  close.py
app/bot/handlers/order/respond/: __init__.py  dialogue.py  insta.py  message.py
app/bot/middlewares/: config.py
app/common/: __init__.py  constants.py  enums.py  formats.py  logger.py  logging.py  templates.py  utils.py  webhook.py
app/config/: __init__.py
app/crud/: __init__.py  admin.py  base.py  crud_booster.py  crud_order.py  crud_order_channel.py  crud_order_message.py  crud_order_render.py  crud_order_respond.py  crud_parse_sheet.py
app/db/: __init__.py  admin.py  booster.py  order.py
app/handlers/: __init__.py  error_handler.py  start.py
app/handlers/order/: close.py
app/handlers/order/respond/: __init__.py  dialogue.py  message.py
app/middlewares/: __init__.py  time.py
app/models/: callbacks.py  errors.py
app/routes/: __init__.py  admin.py  booster.py  order_channel.py  order_message.py  order_render.py  order_respond.py  orders.py  parse_sheet.py  sheets.py  telegram.py
app/schemas/: __init__.py  admin.py  base.py  booster.py  google.py  order.py  order_booster.py  order_channel.py  order_message.py  order_pull.py  order_render.py  order_respond.py  sheets.py  user.py
app/services/: auth.py  google.py  pull.py  telegram.py  time.py
app/services/auth/: __init__.py  manager.py
app/templates/: close_order_admin.j2  error_close_order.j2  error_register.j2  no_verify.j2  order_response_approve.j2  register.j2
app/utils/: __init__.py  constants.py  fields.py  formats.py  logging.py  webhook.py
data/: Copy order B2B.json  DF-cd.json  M+.json  data.json
